# NxtGit

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
docs/: CNAME  index.html  robots.txt  sitemap.xml
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AIReview.tsx  AppChangelog.tsx  AppKeyboardShortcuts.tsx  Chat.tsx  CodeWiki.tsx  CommitDetail.tsx  Dashboard.tsx  FlagIcon.tsx  GitHubStatus.tsx  GlobalSearch.tsx  IssueDetail.tsx  Issues.tsx  Layout.tsx  Login.tsx  MarkdownRenderer.tsx  Notifications.tsx  Onboarding.tsx  PRDetail.tsx  PullRequests.tsx  RepoDetail.tsx  Repositories.tsx  Settings.tsx  Support.tsx  UpdateBanner.tsx  UserProfile.tsx  WindowDragRegion.tsx  WorkflowRunDetail.tsx
src/lib/: ai.ts  appMeta.ts  cache.ts  codewiki.ts  github.ts  preferences.ts  updater.ts
src/stores/: authStore.ts
