[package]
name = "nxtgit"
version = "1.0.0"
description = "AI-native Git client for macOS"
authors = ["scorpion7slayer"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "nxtgit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nxtgit"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["macos-private-api"] }
window-vibrancy = "0.7"
tauri-plugin-shell = "2.0.0"
tauri-plugin-http = "2.0.0"
tauri-plugin-store = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-window-state = "2.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
